--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -55,36 +55,64 @@ Unfortunately, platform dependence of C++ is prohibitive for use of FastJet in c
 
 \section{Implementation}
 
+It turns out, that for reconstruction of jets obtained in pp collisions, with at most a few thousand particles per event, the most efficient algorithms are those with $O(N^2)$ complexity.
+The $O(N\log N)$ algorithms provide an advantage only in events with more then 10,000 particles, which only arise in experiments with heavy ion collisions\cite{fastjet_n3,fastjet_unpub}. While implementation of $O(N\log N)$ algorithms requires use of sophisticated techniques, like Voronoi diagrams\cite{Aurenhammer}, $O(N^2)$ complexity can be achieved with relatively simple approaches described below.
 
-
+\subsection{Generalizaed kt algorithm}
 
 \subsection{Geometric Factorization}
+This is the most significant optimization, reducing complexity from $O(N^2)$ to $O(N^3)$.
+It is explained by the FastJet Lemma\cite{fastjet_n3}.
 
+{\vspace{7px} \bf FastJet Lemma 1:} If particles $i$, $j$ form the smallest $d_{ij}$, and $p_t$
+
+{\vspace{7px} \bf Motivation:} 
+
+{\vspace{7px} \bf Proof:} 
 
 \subsection{Tiling}
 
+{\vspace{7px} \bf FastJet Lemma 2:} 
+
+{\vspace{7px} \bf Motivation:} 
+
+{\vspace{7px} \bf Proof:} 
 
 \subsection{Linked List}
 
+
+\section{Benchmark}
+\red{Make plots to compare to FastJet performarmance.}
 
 \begin{thebibliography}{9}
   
 \bibitem{HepSim}
   S.~V.~Chekanov,
-  %``HepSim: a repository with predictions for high-energy physics experiments,''
+  ``HepSim: a repository with predictions for high-energy physics experiments,''
   \href{http://arxiv.org/abs/1403.1886}{arXiv:1403.1886 [hep-ph]}.
 
 \bibitem{fastjet_man}
   M.~Cacciari, G.~P.~Salam and G.~Soyez,
-  %``FastJet user manual,''
+  ``FastJet user manual,''
   Eur.\ Phys.\ J.\ C {\bf 72} (2012) 1896
   [\href{http://arxiv.org/abs/1111.6097}{arXiv:1111.6097 [hep-ph]}].
 
 \bibitem{fastjet_n3}
   M.~Cacciari and G.~P.~Salam,
-  %``Dispelling the $N^{3}$ myth for the $k_t$ jet-finder,''
+  ``Dispelling the $N^{3}$ myth for the $k_t$ jet-finder,''
   Phys.\ Lett.\ B\ {\bf 641} (2006) 57
   [\href{http://arxiv.org/abs/hep-ph/0512210}{hep-ph/0512210}].
+
+\bibitem{fastjet_unpub}
+  G. P. Salam and M. Cacciari,
+  ``Jet clustering in particle physics, via a dynamic nearest neighbour graph implemented with CGAL,''
+  \href{http://www.lpthe.jussieu.fr/~salam/repository/docs/kt-cgta-v2.pdf}{LPTHE-06-02},
+  unpublished note.
+  
+\bibitem{Aurenhammer}
+  F. Aurenhammer,
+  ``Voronoi diagrams: a survey of a fundamental data structure,''
+  ACM Computing Surveys 23 (1991) 345.
 
 \end{thebibliography}
 
